"""initial_schema

Revision ID: 5b0ba984d40c
Revises: 
Create Date: 2026-02-28 13:44:20.602093

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '5b0ba984d40c'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('admin_users',
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('created_at', sa.String(), server_default='now()', nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_table('message_threads',
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('users',
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('username', sa.String(length=50), nullable=False),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('bio', sa.String(length=200), nullable=True),
    sa.Column('preferred_genres', sa.ARRAY(sa.Text()), server_default='{}', nullable=False),
    sa.Column('status', sa.Enum('pending', 'active', 'disabled', name='userstatus'), nullable=False),
    sa.Column('is_artist', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_index('ix_users_email', 'users', ['email'], unique=False)
    op.create_index('ix_users_status', 'users', ['status'], unique=False)
    op.create_index('ix_users_username', 'users', ['username'], unique=False)
    op.create_table('access_tokens',
    sa.Column('token_hash', sa.LargeBinary(length=32), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('revoked_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('token_hash')
    )
    op.create_index('ix_access_tokens_active', 'access_tokens', ['expires_at'], unique=False, postgresql_where='revoked_at IS NULL')
    op.create_index('ix_access_tokens_user_id', 'access_tokens', ['user_id'], unique=False)
    op.create_table('friends',
    sa.Column('user1_id', sa.UUID(), nullable=False),
    sa.Column('user2_id', sa.UUID(), nullable=False),
    sa.Column('status', sa.Enum('pending', 'accepted', 'declined', name='friendstatus'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.CheckConstraint('user1_id < user2_id', name='ck_friends_ordered'),
    sa.ForeignKeyConstraint(['user1_id'], ['users.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user2_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user1_id', 'user2_id', name='uq_friends_user_pair')
    )
    op.create_index('ix_friends_user1_id', 'friends', ['user1_id'], unique=False)
    op.create_index('ix_friends_user2_id', 'friends', ['user2_id'], unique=False)
    op.create_table('message_thread_participants',
    sa.Column('thread_id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['thread_id'], ['message_threads.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('thread_id', 'user_id')
    )
    op.create_table('messages',
    sa.Column('thread_id', sa.UUID(), nullable=False),
    sa.Column('sender_id', sa.UUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['sender_id'], ['users.id'], ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['thread_id'], ['message_threads.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('posts',
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('privacy', sa.Enum('public', 'friends', 'only_me', name='privacy'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('attachments',
    sa.Column('attachment_type', sa.Enum('text', 'artist_post', 'spotify_link', 'soundcloud_link', 'audio_file', 'video_file', name='attachmenttype'), nullable=False),
    sa.Column('post_id', sa.UUID(), nullable=True),
    sa.Column('message_id', sa.UUID(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.CheckConstraint('post_id IS NOT NULL OR message_id IS NOT NULL', name='ck_attachments_parent'),
    sa.ForeignKeyConstraint(['message_id'], ['messages.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['post_id'], ['posts.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('refresh_tokens',
    sa.Column('token_hash', sa.LargeBinary(length=32), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('access_token_id', sa.UUID(), nullable=True),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('rotated_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('revoked_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['access_token_id'], ['access_tokens.id'], ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('token_hash')
    )
    op.create_index('ix_refresh_tokens_user_id', 'refresh_tokens', ['user_id'], unique=False)
    op.create_table('attachments_artist_post',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(['id'], ['attachments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('attachments_audio_file',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('storage_key', sa.String(length=512), nullable=False),
    sa.Column('mime_type', sa.String(length=64), nullable=False),
    sa.Column('size_bytes', sa.BigInteger(), nullable=False),
    sa.ForeignKeyConstraint(['id'], ['attachments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('attachments_soundcloud_link',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('url', sa.String(length=512), nullable=False),
    sa.Column('track_id', sa.String(length=64), nullable=True),
    sa.ForeignKeyConstraint(['id'], ['attachments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('attachments_spotify_link',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('url', sa.String(length=512), nullable=False),
    sa.Column('track_id', sa.String(length=64), nullable=True),
    sa.ForeignKeyConstraint(['id'], ['attachments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('attachments_text',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(['id'], ['attachments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('attachments_video_file',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('storage_key', sa.String(length=512), nullable=False),
    sa.Column('mime_type', sa.String(length=64), nullable=False),
    sa.Column('size_bytes', sa.BigInteger(), nullable=False),
    sa.ForeignKeyConstraint(['id'], ['attachments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('attachments_video_file')
    op.drop_table('attachments_text')
    op.drop_table('attachments_spotify_link')
    op.drop_table('attachments_soundcloud_link')
    op.drop_table('attachments_audio_file')
    op.drop_table('attachments_artist_post')
    op.drop_index('ix_refresh_tokens_user_id', table_name='refresh_tokens')
    op.drop_table('refresh_tokens')
    op.drop_table('attachments')
    op.drop_table('posts')
    op.drop_table('messages')
    op.drop_table('message_thread_participants')
    op.drop_index('ix_friends_user2_id', table_name='friends')
    op.drop_index('ix_friends_user1_id', table_name='friends')
    op.drop_table('friends')
    op.drop_index('ix_access_tokens_user_id', table_name='access_tokens')
    op.drop_index('ix_access_tokens_active', table_name='access_tokens', postgresql_where='revoked_at IS NULL')
    op.drop_table('access_tokens')
    op.drop_index('ix_users_username', table_name='users')
    op.drop_index('ix_users_status', table_name='users')
    op.drop_index('ix_users_email', table_name='users')
    op.drop_table('users')
    op.drop_table('message_threads')
    op.drop_table('admin_users')
    # ### end Alembic commands ###